fix: prevent university map from overlapping navbar with z-index

--- a/src/components/travel/UniversityMap/index.module.css
+++ b/src/components/travel/UniversityMap/index.module.css
@@ -9,6 +9,8 @@
   margin-left: calc(-50vw + 50%);
   margin-right: calc(-50vw + 50%);
   width: 100vw;
+  position: relative;
+  z-index: 0;
 }
 
 .mapPane {
